# lababs

./: .gitignore  CMakeLists.txt
Lababa4/: CMakeLists.txt  main.cpp
Lababa4/Containers/: CMakeLists.txt  MyStack.cpp  MyStack.h  templ.tpp
Lababa7/: CMakeLists.txt  Lababa7.cpp  Lababa7.h
Lababa7/Documents/: CMakeLists.txt  Documents.cpp  Documents.h
Lababa7/MyVector/: CMakeLists.txt  Myset.h  Myvector.h
Lababa8/: CMakeLists.txt  Source.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
